--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>CSS Transform</title>
 </head>
 <body>
+    <p class="scale">This paragraph is set to 30px wide and 30 px tall. Applying transform: scale(x) will change the dimensions of this paragraph.</p>
     
 </body>
 </html>
