transform with keyframes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <p class="scale">This paragraph is set to 30px wide and 30 px tall. Applying transform: scale(x) will change the dimensions of this paragraph.</p>
-    
+    <div class="box skew20"></div>
+    <div class="box skewneg20"></div>
+    <div class="box skewneg50"></div>
 </body>
 </html>
